# 02_mediacodec_java_opengl

./: agents.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/a02_mediacodec_java_opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeRenderThread.cpp  NativeRenderThread.h  looper.cpp  looper.h  native-codec-jni.cpp
app/src/main/java/com/example/a02_mediacodec_java_opengl/: MainActivity.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/a02_mediacodec_java_opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
